| Summary: | ASTERISK-26603: [patch] chan_pjsip: not switching sending codec to receiving codec when asymmetric_rtp_codec=no | ||||||
| Reporter: | Alexei Gradinari (alexei gradinari) | Labels: | |||||
| Date Opened: | 2016-11-15 15:00:41.000-0600 | Date Closed: | 2016-11-30 10:48:46.000-0600 | ||||
| Priority: | Major | Regression? | |||||
| Status: | Closed/Complete | Components: | Channels/chan_pjsip | ||||
| Versions: | GIT | Frequency of Occurrence | |||||
| Related Issues: |
| ||||||
| Environment: | Attachments: | ( 0) debug.txt ( 1) record.wav | |||||
| Description: | The patch https://gerrit.asterisk.org/#/c/4172/ introduced a new option 'asymmetric_rtp_codec' to disable asymmetric codecs for sending
and receiving. But it makes incorrectly. The sending codec is switched to the receiving codec and then is switched back to the best native codec on EVERY receiving RTP packets. This is because after call of ast_channel_set_rawwriteformat there is call of ast_set_write_format which calls set_format which sets rawwriteformat to the best native format. | ||||||
| Comments: | By: Asterisk Team (asteriskteam) 2016-11-15 15:00:42.632-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Daniel Heckl (DanielYK) 2016-11-24 09:22:05.106-0600 The patch was not released in the new version 13.13.0. Please publish the patch. The released new function ASTERISK-26423 works incorrectly. By: Rusty Newton (rnewton) 2016-11-29 09:15:14.756-0600 For a patch to get merged it needs to be reviewed by others. Asking for someone to "please publish the patch" on JIRA doesn't help or affect the process. If your patch is not getting attention on the review board then you need to ask on the asterisk-dev mailing list or on the asterisk-dev IRC channel if others can review the patch. By: Joshua C. Colp (jcolp) 2016-11-29 09:20:15.328-0600 As well this is only the second day back for the Digium folks from thanksgiving, so we're still catching up on everything including reviews. By: Friendly Automation (friendly-automation) 2016-11-30 10:48:46.931-0600 Change 4453 merged by zuul: chan_pjsip: fix switching sending codec when asymmetric_rtp_codec=no [https://gerrit.asterisk.org/4453|https://gerrit.asterisk.org/4453] By: Friendly Automation (friendly-automation) 2016-11-30 10:49:46.896-0600 Change 4523 merged by zuul: chan_pjsip: fix switching sending codec when asymmetric_rtp_codec=no [https://gerrit.asterisk.org/4523|https://gerrit.asterisk.org/4523] By: Friendly Automation (friendly-automation) 2016-11-30 13:24:17.128-0600 Change 4522 merged by Joshua Colp: chan_pjsip: fix switching sending codec when asymmetric_rtp_codec=no [https://gerrit.asterisk.org/4522|https://gerrit.asterisk.org/4522] By: Daniel Heckl (DanielYK) 2017-02-06 16:08:37.779-0600 I think the patch is incorrect. I have tested 13.14.0-rc1 and detected strange noises. With 13.13.1 I did not hear any sounds. Attached the strange noise. Sometimes the sound file sounds good and sometimes the sound file sounds bad as in the attached .wav file. My guess is that asterisk changes the codec too often while playing the file. By: Alexei Gradinari (alexei gradinari) 2017-02-06 16:24:27.979-0600 Daniel, I see you mixing SIP and PJSIP. I don't think it's good idea. Anyway this patch was tested only with PJSIP. By: Asterisk Team (asteriskteam) 2017-02-06 16:24:28.285-0600 This issue has been reopened as a result of your commenting on it as the reporter. It will be triaged once again as applicable. By: Rusty Newton (rnewton) 2017-02-07 13:53:39.403-0600 Closing this out again. If there is a different or similar issue with chan_sip rather than pjsip, you'll need to open a new ticket. By: Friendly Automation (friendly-automation) 2017-02-23 09:12:31.303-0600 Change 5071 merged by zuul: chan_pjsip: fix switching sending codec when asymmetric_rtp_codec=no [https://gerrit.asterisk.org/5071|https://gerrit.asterisk.org/5071] | ||||||