channels/chan_pjsip.c
@@ -737,8 +737,10 @@ static struct ast_frame *chan_pjsip_read(struct ast_channel *ast)
 		ast_debug(1, "Oooh, got a frame with format of %s on channel '%s' when we're sending '%s', switching to match\n",
 			ast_format_get_name(f->subclass.format), ast_channel_name(ast),
 			ast_format_get_name(ast_channel_rawwriteformat(ast)));
-		ast_channel_set_rawwriteformat(ast, f->subclass.format);
-		ast_set_write_format(ast, ast_channel_writeformat(ast));
+
+		ast_channel_lock(ast);
+		ast_set_write_format_path(ast, f->subclass.format, ast_channel_writeformat(ast));
+		ast_channel_unlock(ast);
 
 		if (ast_channel_is_bridged(ast)) {
 			ast_channel_set_unbridged_nolock(ast, 1);
